<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".SingUpActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        style="@style/button_login_register"
        android:layout_marginStart="@dimen/margin_mid"
        android:layout_marginEnd="@dimen/margin_mid"
        android:layout_marginBottom="@dimen/margin_mid"
        android:onClick="onClickGoMine"
        android:text="@string/login"
        android:textAppearance="@style/basic_button_text"
        app:layout_constraintBottom_toTopOf="@id/invitation_to_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/invitation_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_min"
        android:gravity="center"
        android:text="@string/invitation_to_register"
        android:textAppearance="@style/small_service_text"
        app:layout_constraintBottom_toTopOf="@id/enter_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_have_account"
        android:textAppearance="@style/service_text"

        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAppearance="@style/service_text"
        android:textColor="@color/white"

        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/enter_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_mid"
        android:layout_marginBottom="@dimen/margin_mid"
        app:constraint_referenced_ids="have_account, sign_in"
        app:flow_horizontalGap="@dimen/margin_mid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        >

    </androidx.constraintlayout.helper.widget.Flow>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_google"
        style="@style/button_google"
        android:layout_marginStart="@dimen/margin_mid"
        android:layout_marginEnd="@dimen/margin_mid"
        android:layout_marginBottom="@dimen/margin_mid"
        app:layout_constraintBottom_toTopOf="@id/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_mid"
        android:text="@string/or"
        android:textAppearance="@style/big_text"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.appcompat.widget.AppCompatTextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        app:boxStrokeColor="@color/outline_custom_color"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:helperText=""
        app:helperTextTextColor="@color/red"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="16"
            android:textAppearance="@style/large_text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/eMailContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gray"
        app:boxStrokeColor="@color/outline_custom_color"
        app:errorEnabled="true"
        app:helperText=""
        app:helperTextTextColor="@color/red"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eMailField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textAppearance="@style/large_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/field_block"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mid"
        android:layout_marginEnd="@dimen/margin_mid"
        android:orientation="vertical"
        app:constraint_referenced_ids="eMailContainer, passwordContainer"
        app:flow_verticalGap="@dimen/margin_min"
        app:layout_constraintBottom_toTopOf="@id/button_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.helper.widget.Flow>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBox"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_mid"
        android:buttonTint="@color/orange"
        android:checked="true"
        android:text="@string/remember_me"
        android:textAppearance="@style/service_text"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordContainer">

    </androidx.appcompat.widget.AppCompatCheckBox>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fill_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_min"
        android:text="@string/fill_profile"
        android:textAppearance="@style/service_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acquaintance">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/acquaintance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acquaintance"
        android:textAppearance="@style/large_text"
        app:layout_constraintBottom_toTopOf="@id/field_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.AppCompatTextView>

</androidx.constraintlayout.widget.ConstraintLayout>